# pyink

./: LICENSE  README.md  pyproject.toml  smoke_test_cli.py
.claude/: settings.local.json
.github/workflows/: test.yml
examples/: orx_cli.py
pyink/: __init__.py  app.py  component.py  cursor_helpers.py  dom.py  fiber.py  focus.py  measure_element.py  reconciler.py  terminal.py  text_wrap.py  vnode.py
pyink/components/: __init__.py  confirm_input.py  progress_bar.py  select_input.py  spinner.py  text_input.py
pyink/examples/: alternate_screen.py  border_backgrounds.py  borders.py  box_backgrounds.py  chat.py  counter.py  dashboard.py  focus.py  hello.py  justify_content.py  select_input.py  table.py  terminal_resize.py  use_animation.py  use_focus.py  use_focus_with_id.py  use_input.py  use_stdout.py
pyink/hooks/: __init__.py  context.py  use_animation.py  use_app.py  use_box_metrics.py  use_cursor.py  use_effect.py  use_focus.py  use_input.py  use_is_screen_reader_enabled.py  use_mouse.py  use_paste.py  use_ref.py  use_state.py  use_stdout.py  use_window_size.py
pyink/input/: __init__.py  input_parser.py  keys.py  kitty_keyboard.py  reader.py
pyink/layout/: __init__.py  engine.py  styles.py
pyink/renderer/: __init__.py  ansi.py  borders.py  output.py  render_node.py  sanitize_ansi.py
tests/: test_borders.py  test_component.py  test_component_ordering.py  test_components.py  test_hooks.py  test_input.py  test_layout.py  test_modifier_arrows.py  test_output_height.py  test_render.py  test_scroll_view.py  test_vnode.py  test_wrap_parity.py
